theme-extension-src/assets/app.css
/* Application-specific styles. */
html,
body {
  margin: 0;
  padding: 0;
  font-family: "Work Sans", sans-serif;
  background-color: var(--belt-wizard-background-color);
}

body {
  color: var(--neutral);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  min-height: 100vh;
  margin: 0 auto;
  overflow-x: hidden;
}

a {
  color: var(--potters-clay-light);
}

body > header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-inline: 20px;
  height: 75px;
}

@media screen and (min-width: 500px) {
  body > header {
    padding-inline: 64px;
    justify-content: unset;
  }
}

header#navbar {
  color: var(--neutral-darkest);
  background-color: var(--potters-clay-lightest);
}

header#navbar .logo {
  height: 28px;
}

header#navbar nav {
  display: none;
}

@media screen and (min-width: 500px) {
  header#navbar nav {
    display: unset;
    flex-grow: 1;
  }
}

header#navbar ul {
  display: flex;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 0;
  gap: 32px;
}

header#navbar li {
  padding: 0;
}

header#navbar li a {
  color: var(--neutral-darkest);
  font-weight: 400;
  text-decoration: none;
}

header#navbar li a:hover {
  text-decoration: underline;
}

body > main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 0rem auto;
  min-width: 1260px;
  max-width: min(1260px, 100%);
}

/* Jumbotron */
#jumbotron {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  margin-inline: -8px;
  padding-inline-start: 24px;
  background:
    url(/assets/belts/jumbotron-belts.png),
    radial-gradient(#433f3c, #2d2d2d);
  background-repeat: no-repeat, no-repeat;
  background-size: 55vw, auto;
  /* Fallback that's good enough. */
  background-position-x: -25%, center;
  background-position-y: center, center;
  /* Future forward, see https://caniuse.com/mdn-css_properties_background-position-x_side-relative_values */
  background-position-y: bottom 10%, center;
}
#jumbotron[hidden] {
  display: none;
}

@media screen and (min-width: 500px) {
  #jumbotron {
    padding-inline-start: 50vw;
    background-size: 57vw, auto;
    /* Fallback that's good enough. */
    background-position-x: left, center;
    background-position-y: 130%, center;
    /* Future forward, see https://caniuse.com/mdn-css_properties_background-position-x_side-relative_values */
    background-position-y: bottom 10%, center;
  }
}

@media screen and (max-width: 500px) {
  #jumbotron {
    background-size: 90vw, auto;
    /* Fallback that's good enough. */
    background-position-x: left, center;
    background-position-y: 20%, center;
    /* Future forward, see https://caniuse.com/mdn-css_properties_background-position-x_side-relative_values */
    background-position-y: bottom 10%, center;
  }
}

#jumbotron h1 {
  font-family: "Founders Grotesque X Condensed Light";
  letter-spacing: 0.15em;
  text-transform: uppercase;
  margin: 0;
}

#jumbotron h2 {
  margin-block-start: 0;
  margin-block-end: 0.5em;
  font-family: "Times New Roman", Times, serif;
  font-size: 44px;
}

@media screen and (min-width: 500px) {
  #jumbotron h2 {
    font-size: 60px;
  }
}

#jumbotron p {
  margin-block-start: 0;
  color: var(--potters-clay-light);
}

#jumbotron button.btn {
  align-self: flex-start;
}

/* Belt Wizard */
belt-wizard {
  flex-grow: 1;
  margin-inline: 8px;
}

/* Stepper */
#stepper {
  position: relative;
  display: flex;
  flex-grow: 1;
  justify-content: space-between;
  margin: 0 auto;
  max-width: 1260px;
}
#stepper:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 1px;
  background-color: var(--neutral-white);
  top: 7px;
  z-index: 0;
}

#stepper button.step {
  position: relative;
  width: 14px;
  height: 14px;
  border-radius: 7px;
  border: none;
  background-color: #b6c6fd;
  z-index: 1;
  cursor: pointer;
}
#stepper button.step:not(:first-child):before {
  content: "";
  display: block;
  position: absolute;
  background-color: var(--belt-wizard-background-color);
  width: 7px;
  height: 1px;
  left: -50%;
}
#stepper button.step:not(:last-child):after {
  content: "";
  display: block;
  position: absolute;
  background-color: var(--belt-wizard-background-color);
  width: 7px;
  height: 1px;
  right: -50%;
}

#stepper button.step:disabled {
  background-color: #476fff;
  cursor: not-allowed;
}

/* Steps */
#stepHeading {
  margin-block-start: 2em;
}

#stepHeading h2 {
  margin-block: 0;
}
#stepHeading h2 ~ .subtitle {
  margin-block-start: 0;
}

#stepTitle {
  flex-grow: 1;
}

belt-wizard section.step h2 {
  margin-block-start: 0;
  margin-block-end: 0.5em;
}

/* Belt Preview */
belt-wizard > header {
  position: sticky;
  top: 0;
  padding-block-start: 1rem;
  background: var(--belt-wizard-background-color);
  z-index: 5;
}

/* Belt Preview Animation */
#preview belt-preview {
  display: block;
  position: relative;
  left: -8px;
  min-height: 150px;
  pointer-events: none;
  transition: transform 0.5s ease-in-out;
  align-content: center;
}
#preview belt-preview.step-1 {
  transform: scale(1.5) translateX(1600px);
  transform-origin: left;
}
#preview belt-preview.step-2 {
  transform: scale(1.5) translateX(300px);
  transform-origin: left;
}
#preview belt-preview.step-3 {
  transform: scale(2.5) translateX(150px);
  transform-origin: left;
}
#preview belt-preview.step-4 {
  transform: scale(2) translateX(89px);
}
#preview belt-preview.step-5 {
  transform: scale(1.5) translateX(-300px);
  transform-origin: right;
}

/* Belt Size */
#size {
  background-position: right 30%;
  background-size: 80vw auto;
  background-repeat: no-repeat;
  position: relative;
  margin-top: -10%;
  z-index: 5;
}

@media screen and (min-width: 500px) {
  #size {
    background-position-x: right;
    background-position-y: 20%;
    background-size: 450px auto;
  }
}

#sizingChart {
  width: auto;
  border-radius: 8px;
}

@media screen and (min-width: 500px) {
  #sizingChart {
    max-width: 50vw;
    position: absolute;
    right: 0;
    top: -20%;
  }
}

/* Checkout Summary */
#checkoutTotal {
  margin-block: 28px 16px;
}

